# logency

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  readme.md
benchmark/: CMakeLists.txt  fmt_bench.cpp  stream_bench.cpp
cmake/: clang_tidy.cmake  cmake_policy.cmake  compiler_options.cmake
doc/: custom_message.md  logger.md  manager.md  message_pack.md  readme.md  sink.md  tutorial.md
example/: CMakeLists.txt  basic_file.cpp  color_console.cpp  console.cpp  custom_message.cpp  error_handler.cpp  filter.cpp  flusher.cpp  rotation_file.cpp
include/logency/: dispatcher.hpp  logger.hpp  manager.hpp  sink.hpp
include/logency/core/: exception.hpp
include/logency/detail/: detail.hpp  include_linux.hpp  include_os.hpp  include_windows.hpp  message_pack.hpp
include/logency/detail/file/: basic_file.hpp  file_helper.hpp
include/logency/detail/string/: string.hpp
include/logency/detail/thread/: blocking_pair_queue.hpp  blocking_queue.hpp  console_mutex.hpp  null_mutex.hpp  thread_pool.hpp  thread_unit_interface.hpp
include/logency/message/: fmt_message.hpp  format_message.hpp  log_level.hpp  message_formatter.hpp  stream_message.hpp  time.hpp
include/logency/sink_module/: ansi_color_console_module.hpp  basic_file_module.hpp  color_console_module.hpp  color_console_module_base.hpp  color_output.hpp  console_module.hpp  module_interface.hpp  null_module.hpp  ostream_module.hpp  rotation_file_module.hpp  win32_color_console_module.hpp
test/: CMakeLists.txt  dispatcher_test.cpp  file_directory.cpp  file_directory.hpp  include_doctest.hpp  logger_test.cpp  main_basic.cpp  main_file.cpp  manager_test.cpp  sink_test.cpp  sources.cmake
test/core/: exception_test.cpp
test/detail/file/: basic_file_test.cpp  file_helper_test.cpp
test/detail/string/: string_test.cpp
test/detail/thread/: blocking_pair_queue_test.cpp  blocking_queue_test.cpp  thread_pool_test.cpp
test/global_resource/: dispatcher.cpp  dispatcher.hpp  logger.cpp  logger.hpp  thread_pool.cpp  thread_pool.hpp
test/sink_module/: basic_file_module_test.cpp  mock_base_module.hpp  ostream_module_test.cpp  rotation_file_module_test.cpp
test/utils/: check_exception.hpp  file.hpp  file_fixture.cpp  file_fixture.hpp  literals.hpp  mock_sink_module.hpp  string.hpp  test_message.hpp
